tests/baselines/reference/booleanFilterAnyArray.errors.txt
tests/cases/compiler/booleanFilterAnyArray.ts(14,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'xs' must be of type 'Ari<any>', but here has type 'Ari<unknown>'.


==== tests/cases/compiler/booleanFilterAnyArray.ts (1 errors) ====
    interface Bullean { }
    interface BulleanConstructor {
        new(v1?: any): Bullean;
        <T>(v2?: T): v2 is T;
    }
    
    interface Ari<T> {
        filter<S extends T>(cb1: (value: T) => value is S): Ari<S>;
        filter(cb2: (value: T) => unknown): Ari<T>;
    }
    declare var Bullean: BulleanConstructor;
    declare let anys: Ari<any>;
    var xs: Ari<any>;
    var xs = anys.filter(Bullean)
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'xs' must be of type 'Ari<any>', but here has type 'Ari<unknown>'.
    
    declare let realanys: any[];
    var ys = realanys.filter(Boolean)
    